[package]
name = "hardware-address"
version = "0.1.3"
edition = "2021"
repository = "https://github.com/al8n/hardware-address"
homepage = "https://github.com/al8n/hardware-address"
documentation = "https://docs.rs/hardware-address"
description = "IEEE 802 MAC-48, EUI-48, EUI-64, or a 20-octet IP over InfiniBand link-layer addresses and more"
license = "MIT OR Apache-2.0"
rust-version = "1.56"
categories = ["network-programming", "no-std"]
keywords = ["mac-address", "eui64", "eui48", "inifiband", "ieee802"]

[features]
default = ["std"]
alloc = []
std = ["thiserror/default"]

[dependencies]
paste = "1"
thiserror = { version = "2", default-features = false }

serde = { version = "1.0", features = ["derive"], default-features = false, optional = true }

[dev-dependencies]
bincode = { version = "2", features = ["serde"] }
serde_json = "1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin)'] }
