[package]
name = "python"
version = "0.2.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "hardware_address"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.27"
hardware-address = { path = "../", version = "0.2.0", features = ["pyo3"] }
