[package]
name = "python"
version = "0.2.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
# Named to not collide with the root `hardware_address` crate (which
# we depend on). Without this, rustdoc --test / tarpaulin fail with
# E0464 "multiple candidates for `rlib` dependency `hardware_address`".
# The Python import name is controlled by `module-name` in
# pyproject.toml, so this rename does not affect downstream users.
name = "py_hardware_address"
crate-type = ["cdylib", "lib"]

[dependencies]
pyo3 = "0.28"
hardware-address = { path = "../", version = "0.3", features = ["pyo3"] }

[build-dependencies]
pyo3-build-config = "0.28"
